--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = [ "Jakub A. Gramsz <jakub@gramsz.com>" ]
 homepage = "https://github.com/olorin37/hbs-cli"
 repository = "https://github.com/olorin37/hbs-cli"
 documentation = "https://docs.rs/crate/hbs-cli"
-readme = "README.org"
+readme = "README.md"
 keywords = ["handlebars", "templating", "cli", "YAML", "JSON"]
 categories = ["command-line-interface", "command-line-utilities", "value-formatting"]
 license = "MIT"
