--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ edition = "2018"
 
 [dependencies]
 structopt = "0.3"
-handlebars = "2.0" # "3.0.0-beta.4"
+handlebars = "3.0.1"
 serde = "1.0"
 serde_yaml = "0.8"
 glob = "0.3"
