Imported from https://olorin37@github.com/olorin37/hbs-cli.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = Simple, yet usefull handlebars CLI, templates are feeded from YAML (so, JSON too) property file.
+[access "refs/*"]
+	owner = group user/Jakub A. G. (olorin37)
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/Jakub A. G. (olorin37)
+	label-Verified = -1..+1 group user/Jakub A. G. (olorin37)
+	push = group user/Jakub A. G. (olorin37)
+	read = group user/Jakub A. G. (olorin37)
+	rebase = group user/Jakub A. G. (olorin37)
+	removeReviewer = group user/Jakub A. G. (olorin37)
+	submit = group user/Jakub A. G. (olorin37)
+[access "refs/heads/*"]
+	create = group user/Jakub A. G. (olorin37)
+	push = +force group user/Jakub A. G. (olorin37)
+	pushMerge = group user/Jakub A. G. (olorin37)
+	read = group user/Jakub A. G. (olorin37)
+[access "refs/tags/*"]
+	push = group user/Jakub A. G. (olorin37)
+	push = +force group user/Jakub A. G. (olorin37)
