--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "hbs-cli"
 description = "Simple CLI for generating text from handlebars templates, by feeding them with data from file YAML/JSON."
-version = "0.2.0"
+version = "0.2.1"
 authors = [ "Jakub A. Gramsz <jakub@gramsz.com>" ]
 homepage = "https://github.com/olorin37/hbs-cli"
 repository = "https://github.com/olorin37/hbs-cli"
@@ -13,8 +13,8 @@ license = "MIT"
 edition = "2018"
 
 [dependencies]
-structopt = "0.3"
-handlebars = "2.0" # "3.0.0-beta.4"
-serde = "1.0"
-serde_yaml = "0.8"
-glob = "0.3"
+structopt = "<0.4"
+handlebars = "<4.0"
+serde = "<2.0"
+serde_yaml = "<0.9"
+glob = "<0.4"
